[package]
name = "tankmaze"
version = "0.1.0"
authors = ["bernardcjason@gmail.com <bernardcjason@gmail.com>"]
edition = "2018"

[features]
soundoff = []


[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["image","gfx" , "ttf" , "static-link","bundled" ]

[dependencies]
pretty_env_logger = "0.4"
log ="0.4"
rng = "0.1.0"
rand = "0.6.0"
gio = "0.8"
lazy_static = "1.4.0"

[build-dependencies]
fs_extra = "1.1.0"
